--- a/styles/components/ExperienceBar.module.css
+++ b/styles/components/ExperienceBar.module.css
@@ -20,10 +20,12 @@
   height: 4px;
   border-radius: 4px;
   background-color: var(--green);
+  transition: width 0.6s;
 }
 
 span.currentExperience {
   position: absolute;
   top: 12px;
   transform: translateX(-50%);
+  transition: left 0.6s;
 }
